*Everything works like before but not from within MainWindow.cs
* Slighty different styles
* Your own stats are highlighted
* No Info logs for now

--- a/MatchingMakingMonitor/MainWindow.xaml
+++ b/MatchingMakingMonitor/MainWindow.xaml
@@ -13,10 +13,11 @@
         Width="1280" 
         Height="768"
         MinWidth="1280"
-				DataContext="{Binding MainWindowViewModel, Source={StaticResource ViewModelLocator}}">
+				DataContext="{Binding MainWindowViewModel, Source={StaticResource ViewModelLocator}}"
+				SizeChanged="WindowSizeChanged">
 	<StackPanel Orientation="Vertical">
-		<StackPanel VerticalAlignment="Top" Orientation="Vertical">
-			<DockPanel Name="Header" Background="#FF333333" Height="47"
+		<StackPanel Name="Header" VerticalAlignment="Top" Orientation="Vertical">
+			<DockPanel Background="#FF333333" Height="47"
 							 DataContext="{Binding HeaderViewModel, Source={StaticResource ViewModelLocator}}">
 				<Button Command="{Binding LogoClickCommand}" Cursor="Hand">
 					<Button.Template>
@@ -30,99 +31,110 @@
 				</Button>
 
 				<StackPanel DockPanel.Dock="Right" Orientation="Horizontal" HorizontalAlignment="Right" >
-					<StackPanel Orientation="Horizontal" VerticalAlignment="Center" Height="32" Width="150">
-						<Image x:Name="ConnectionIcon" Margin="0,0,0,0" Source="Images/connectionIcon.png" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="30"/>
-						<Label x:Name="ConnectionText" Content="{Binding ConnectionState}" HorizontalAlignment="Left" Margin="0,0,0,0" FontSize="13"  VerticalAlignment="Center" Height="32" Foreground="White" />
-					</StackPanel>
+					<!--<StackPanel Orientation="Horizontal" VerticalAlignment="Center" Height="32" Width="150">
+						<Image Margin="0,0,0,0" Source="Images/connectionIcon.png" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="30"/>
+						<Label Content="{Binding ConnectionState}" HorizontalAlignment="Left" Margin="0,0,0,0" FontSize="13"  VerticalAlignment="Center" Height="32" Foreground="White" />
+					</StackPanel>-->
 
 					<StackPanel DockPanel.Dock="Right" Orientation="Horizontal" VerticalAlignment="Center" Margin="0,0,10,0">
 						<!--<Image x:Name="QrCode" Margin="0,0,10,0" Source="Images/qrcodeIcon.png" MouseDown="OpenQrCodeWindow" Height="32" VerticalAlignment="Center" HorizontalAlignment="Right" Width="30" Cursor="Hand"/>-->
 						<Button Command="{Binding SettingsCommand}">
 							<Button.Template>
 								<ControlTemplate>
-									<Image x:Name="ImgSettings" Source="Images/gearIcon.png" Height="32" VerticalAlignment="Center" HorizontalAlignment="Right" Width="30" Cursor="Hand"/>
+									<Image Source="Images/gearIcon.png" Height="32" VerticalAlignment="Center" HorizontalAlignment="Right" Width="30" Cursor="Hand"/>
 								</ControlTemplate>
 							</Button.Template>
 						</Button>
 					</StackPanel>
 				</StackPanel>
 			</DockPanel>
-			<DockPanel DataContext="{Binding SubHeaderViewModel, Source={StaticResource ViewModelLocator}}" Height="31">
+			<DockPanel Background="#33333333" DataContext="{Binding SubHeaderViewModel, Source={StaticResource ViewModelLocator}}" Height="31">
 				<StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="10,0,0,0">
-					<TextBlock x:Name="LblRegion" Text="Region:" Margin="0,0,10,0" VerticalAlignment="Center" />
-					<ComboBox x:Name="ComRegion" VerticalAlignment="Center" Width="90" Height="26" 
+					<TextBlock Text="Region:" Margin="0,0,10,0" VerticalAlignment="Center" />
+					<ComboBox VerticalAlignment="Center" Width="90" Height="26" 
 										ItemsSource="{Binding Regions}"
 										SelectedValue="{Binding Region}"
 										IsEnabled="{Binding EnableUI}">
 					</ComboBox>
 				</StackPanel>
 				<StackPanel Orientation="Horizontal">
-					<TextBlock x:Name="LblInstallDirectory" Text="Installation Directory:&#xA;" Margin="20,0,0,0" VerticalAlignment="Center" Height="19"/>
+					<TextBlock Text="Installation Directory:&#xA;" Margin="20,0,0,0" VerticalAlignment="Center" Height="19"/>
 					<Button Command="{Binding PathClickCommand}" Cursor="Hand" Margin="10,0,0,0" IsEnabled="{Binding EnableUI}">
 						<Button.Template>
 							<ControlTemplate TargetType="Button">
-								<TextBlock x:Name="TxtInstallDirectoryValue" Text="{Binding InstallDirectoryText}" Foreground="{Binding InstallDirectoryColor}" VerticalAlignment="Center" Height="19"/>
+								<TextBlock Text="{Binding InstallDirectoryText}" Foreground="{Binding InstallDirectoryColor}" VerticalAlignment="Center" Height="19"/>
 							</ControlTemplate>
 						</Button.Template>
 					</Button>
 				</StackPanel>
 				<StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,10,0">
-					<Label Foreground="{Binding StatusColor}" x:Name="LblStatus" Content="{Binding StatusText}" Margin="0,0,10,0" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+					<Label Foreground="{Binding StatusColor}" Content="{Binding StatusText}" Margin="0,0,10,0" VerticalAlignment="Center" HorizontalAlignment="Right"/>
 					<ProgressBar Width="100" Height="15" IsIndeterminate="True" Visibility="{Binding ShowProgress}"></ProgressBar>
 				</StackPanel>
 			</DockPanel>
 		</StackPanel>
 
-		<StackPanel DataContext="{Binding StatsViewModel, Source={StaticResource ViewModelLocator}}">
+		<StackPanel Name="Stats" DataContext="{Binding StatsViewModel, Source={StaticResource ViewModelLocator}}">
 			<StackPanel.Resources>
 				<ResourceDictionary>
 					<DataTemplate x:Key="PlayerTemplate">
-						<Grid Margin="5,5" Background="{Binding Background}">
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="25*"></ColumnDefinition>
-								<ColumnDefinition Width="25*"></ColumnDefinition>
-								<ColumnDefinition Width="25*"></ColumnDefinition>
-								<ColumnDefinition Width="25*"></ColumnDefinition>
-							</Grid.ColumnDefinitions>
-							<StackPanel Grid.Column="0" Orientation="Vertical">
-								<TextBlock Margin="5" FontWeight="Bold" Foreground="{Binding ColorName}" Text="{Binding Name}"/>
-								<TextBlock Margin="5" Foreground="Black" Text="{Binding ShipName}" />
-							</StackPanel>
-							<StackPanel Grid.Column="1" Orientation="Vertical" Visibility="{Binding StatsVisibility}">
-								<TextBlock Margin="5" Foreground="{Binding ColorBattles}" Text="{Binding TextBattles}" />
-								<TextBlock Margin="5" Foreground="{Binding ColorAvgXp}" Text="{Binding TextAvgXp}" />
-							</StackPanel>
-							<StackPanel Grid.Column="2" Orientation="Vertical" Visibility="{Binding StatsVisibility}">
-								<TextBlock Margin="5" Foreground="{Binding ColorWins}" Text="{Binding TextWins}" />
-								<TextBlock Margin="5" Foreground="{Binding ColorWinRate}" Text="{Binding TextWinRate}" />
-							</StackPanel>
-							<StackPanel Grid.Column="3" Orientation="Vertical" Visibility="{Binding StatsVisibility}">
-								<TextBlock Margin="5" Foreground="{Binding ColorAvgDamage}" Text="{Binding TextAvgDamage}" />
-								<TextBlock Margin="5" Foreground="{Binding ColorAvgFrags}" Text="{Binding TextAvgFrags}" />
-							</StackPanel>
-							<DockPanel Grid.Column="1" Visibility="{Binding TextVisibility}">
-								<TextBlock Margin="5" VerticalAlignment="Center" Foreground="{Binding ColorAvgDamage}" Text="No stats or hidden" />
-							</DockPanel>
-						</Grid>
+						<Border Margin="3,3" BorderThickness="2" BorderBrush="{Binding ColorBorder}" Background="{Binding Background}">
+							<Button Command="{Binding StatsViewModel.DetailCommand, Source={StaticResource ViewModelLocator}}"
+											CommandParameter="{Binding CommandParams}" Cursor="Hand">
+								<Button.Template>
+									<ControlTemplate TargetType="Button">
+										<Grid>
+											<Grid.ColumnDefinitions>
+												<ColumnDefinition Width="25*"></ColumnDefinition>
+												<ColumnDefinition Width="25*"></ColumnDefinition>
+												<ColumnDefinition Width="25*"></ColumnDefinition>
+												<ColumnDefinition Width="25*"></ColumnDefinition>
+											</Grid.ColumnDefinitions>
+											<StackPanel Grid.Column="0" Orientation="Vertical">
+												<TextBlock Margin="5" FontWeight="Bold" Foreground="{Binding ColorName}" Text="{Binding TextName}"/>
+												<TextBlock Margin="5" Foreground="Black" Text="{Binding ShipName}" />
+											</StackPanel>
+											<StackPanel Grid.Column="1" Orientation="Vertical" Visibility="{Binding StatsVisibility}">
+												<TextBlock Margin="5" Foreground="{Binding ColorBattles}" Text="{Binding TextBattles}" />
+												<TextBlock Margin="5" Foreground="{Binding ColorAvgXp}" Text="{Binding TextAvgXp}" />
+											</StackPanel>
+											<StackPanel Grid.Column="2" Orientation="Vertical" Visibility="{Binding StatsVisibility}">
+												<TextBlock Margin="5" Foreground="{Binding ColorWins}" Text="{Binding TextWins}" />
+												<TextBlock Margin="5" Foreground="{Binding ColorWinRate}" Text="{Binding TextWinRate}" />
+											</StackPanel>
+											<StackPanel Grid.Column="3" Orientation="Vertical" Visibility="{Binding StatsVisibility}">
+												<TextBlock Margin="5" Foreground="{Binding ColorAvgDamage}" Text="{Binding TextAvgDamage}" />
+												<TextBlock Margin="5" Foreground="{Binding ColorAvgFrags}" Text="{Binding TextAvgFrags}" />
+											</StackPanel>
+											<DockPanel Grid.Column="1" Visibility="{Binding TextVisibility}">
+												<TextBlock Margin="5" VerticalAlignment="Center" Foreground="{Binding ColorAvgDamage}" Text="No stats or hidden" />
+											</DockPanel>
+										</Grid>
+									</ControlTemplate>
+								</Button.Template>
+							</Button>
+						</Border>
 					</DataTemplate>
 				</ResourceDictionary>
 			</StackPanel.Resources>
-			<Grid Visibility="{Binding ListVisible}" Margin="10,0,10,0">
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="50*"></ColumnDefinition>
-					<ColumnDefinition Width="50*"></ColumnDefinition>
-				</Grid.ColumnDefinitions>
-				<StackPanel Grid.Column="0">
-					<TextBlock>Friendly</TextBlock>
-					<ItemsControl ItemsSource="{Binding FriendlyPlayers}" ItemTemplate="{StaticResource PlayerTemplate}">
-					</ItemsControl>
-				</StackPanel>
-				<StackPanel Grid.Column="1">
-					<TextBlock>Enemy</TextBlock>
-					<ItemsControl ItemsSource="{Binding EnemyPlayers}" ItemTemplate="{StaticResource PlayerTemplate}">
-					</ItemsControl>
-				</StackPanel>
-			</Grid>
+			<ScrollViewer Name="Scroller" VerticalScrollBarVisibility="Auto">
+				<Grid Name="StatsContent" Visibility="{Binding ListVisibility}" Margin="10,10,10,0">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="50*"></ColumnDefinition>
+						<ColumnDefinition Width="50*"></ColumnDefinition>
+					</Grid.ColumnDefinitions>
+					<StackPanel Grid.Column="0">
+						<TextBlock FontSize="15" FontWeight="Bold" Foreground="Green">Friendly team</TextBlock>
+						<ItemsControl ItemsSource="{Binding FriendlyPlayers}" ItemTemplate="{StaticResource PlayerTemplate}">
+						</ItemsControl>
+					</StackPanel>
+					<StackPanel Grid.Column="1">
+						<TextBlock FontSize="15" FontWeight="Bold" Foreground="OrangeRed">Enemy team</TextBlock>
+						<ItemsControl ItemsSource="{Binding EnemyPlayers}" ItemTemplate="{StaticResource PlayerTemplate}">
+						</ItemsControl>
+					</StackPanel>
+				</Grid>
+			</ScrollViewer>
 		</StackPanel>
 	</StackPanel>
 </Window>
