* Corrected NameSpace * Added weights to settings

--- a/MatchingMakingMonitor/App.xaml
+++ b/MatchingMakingMonitor/App.xaml
@@ -1,14 +1,15 @@
-﻿<Application x:Class="MatchingMakingMonitor.App"
+﻿<Application x:Class="MatchMakingMonitor.App"
 						 x:Name="App"
 						 ShutdownMode="OnMainWindowClose"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MatchingMakingMonitor"
-						 xmlns:vm="clr-namespace:MatchingMakingMonitor.ViewModels"
+             xmlns:local="clr-namespace:MatchMakingMonitor"
+						 xmlns:vm="clr-namespace:MatchMakingMonitor.ViewModels"
 						 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d">
 	<Application.Resources>
 		<vm:ViewModelLocator x:Key="ViewModelLocator" d:IsDataSource="true" />
+		<vm:PercentageConverter x:Key="PercentageConverter" />
 	</Application.Resources>
 </Application>
