--- a/MatchingMakingMonitor/MainWindow.xaml
+++ b/MatchingMakingMonitor/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Name="Matchmaking_Monitor" x:Class="MatchingMakingMonitor.MainWindow"
+﻿<Window x:Name="Matchmaking_Monitor" x:Class="MatchMakingMonitor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MatchingMakingMonitor"
-				xmlns:VM="clr-namespace:MatchingMakingMonitor.ViewModels"
+        xmlns:local="clr-namespace:MatchMakingMonitor"
+				xmlns:VM="clr-namespace:MatchMakingMonitor.ViewModels"
         mc:Ignorable="d"
         Title="WoWReplays Matchmaking Monitor" 
         WindowStartupLocation="Manual" 
