--- a/MatchingMakingMonitor/QrCodeWindow.xaml
+++ b/MatchingMakingMonitor/QrCodeWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="MatchingMakingMonitor.QrCodeWindow"
+﻿<Window x:Class="MatchMakingMonitor.QrCodeWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MatchingMakingMonitor"
+        xmlns:local="clr-namespace:MatchMakingMonitor"
         mc:Ignorable="d"
         Title="QrCode" Height="300" Width="300">
     <Grid>
