--- a/MatchingMakingMonitor/SettingsWindow.xaml
+++ b/MatchingMakingMonitor/SettingsWindow.xaml
@@ -1,15 +1,16 @@
-﻿<Window x:Name="winSettings" x:Class="MatchingMakingMonitor.SettingsWindow"
+﻿<Window x:Name="winSettings" x:Class="MatchMakingMonitor.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        xmlns:local="clr-namespace:MatchingMakingMonitor"
+        xmlns:local="clr-namespace:MatchMakingMonitor"
+				xmlns:vm="clr-namespace:MatchMakingMonitor.ViewModels"
         mc:Ignorable="d"
 				Icon="Images/favicon.ico" 
-        Title="Settings" Height="460" Width="720"
+        Title="UI Settings" MinHeight="340" Height="340" Width="720"
 				DataContext="{Binding SettingsViewModel, Source={StaticResource ViewModelLocator}}">
-	<StackPanel Orientation="Vertical" Margin="10">
+	<StackPanel Orientation="Vertical" Margin="10" Height="Auto">
 		<StackPanel x:Name="TextPanel" HorizontalAlignment="Stretch" VerticalAlignment="Top" Width="auto" Height="auto" CanVerticallyScroll="true" Grid.Column="1">
 			<TextBlock Text="Text Size" />
 			<ComboBox x:Name="ComboTextSizes" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120"
@@ -17,6 +18,7 @@
 								SelectedValue="{Binding Settings.FontSize}"
 								>
 			</ComboBox>
+
 		</StackPanel>
 		<Grid Name="SettingsGrid" VerticalAlignment="Top" Margin="0,10,0,10">
 			<Grid.ColumnDefinitions>
@@ -33,6 +35,7 @@
 			</Grid.ColumnDefinitions>
 			<Grid.RowDefinitions>
 				<RowDefinition Height="19"></RowDefinition>
+				<RowDefinition Height="1*"></RowDefinition>
 				<RowDefinition Height="1*"></RowDefinition>
 				<RowDefinition Height="1*"></RowDefinition>
 				<RowDefinition Height="1*"></RowDefinition>
@@ -80,7 +83,7 @@
 				<xctk:ColorPicker SelectedColor="{Binding Settings.Color1}"></xctk:ColorPicker>
 			</StackPanel>
 			<!--#endregion-->
-			<!--#region Row 3-->
+			<!--#region Row 2-->
 			<TextBlock Grid.Column="0" Grid.Row="2" FontSize="10" FontWeight="Bold" Text="Battle limits" VerticalAlignment="Center"></TextBlock>
 			<TextBox Grid.Column="1" Grid.Row="2" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.BattleLimits[0], UpdateSourceTrigger=PropertyChanged}" Name="BattleLimit1"></TextBox>
 			<TextBox Grid.Column="2" Grid.Row="2" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.BattleLimits[1], UpdateSourceTrigger=PropertyChanged}" Name="BattleLimit2"></TextBox>
@@ -92,33 +95,64 @@
 			<TextBox Grid.Column="8" Grid.Row="2" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.BattleLimits[7], UpdateSourceTrigger=PropertyChanged}" Name="BattleLimit8"></TextBox>
 			<TextBox Grid.Column="9" Grid.Row="2" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.BattleLimits[8], UpdateSourceTrigger=PropertyChanged}" Name="BattleLimit9"></TextBox>
 			<!--#endregion-->
-
-			<!--#region Row 4-->
+			<!--#region Row 3-->
 			<TextBlock Grid.Column="0" Grid.Row="3" FontSize="9" FontWeight="Bold" Text="Winrate limits" VerticalAlignment="Center"></TextBlock>
-			<TextBox Grid.Column="1" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[0], UpdateSourceTrigger=PropertyChanged}" Name="WinLimit1"></TextBox>
-			<TextBox Grid.Column="2" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[1], UpdateSourceTrigger=PropertyChanged}" Name="WinLimit2"></TextBox>
-			<TextBox Grid.Column="3" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[2], UpdateSourceTrigger=PropertyChanged}" Name="WinLimit3"></TextBox>
-			<TextBox Grid.Column="4" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[3], UpdateSourceTrigger=PropertyChanged}" Name="WinLimit4"></TextBox>
-			<TextBox Grid.Column="5" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[4], UpdateSourceTrigger=PropertyChanged}" Name="WinLimit5"></TextBox>
-			<TextBox Grid.Column="6" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[5], UpdateSourceTrigger=PropertyChanged}" Name="WinLimit6"></TextBox>
-			<TextBox Grid.Column="7" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[6], UpdateSourceTrigger=PropertyChanged}" Name="WinLimit7"></TextBox>
-			<TextBox Grid.Column="8" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[7], UpdateSourceTrigger=PropertyChanged}" Name="WinLimit8"></TextBox>
-			<TextBox Grid.Column="9" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[8], UpdateSourceTrigger=PropertyChanged}" Name="WinLimit9"></TextBox>
+			<TextBox Grid.Column="1" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[0], UpdateSourceTrigger=PropertyChanged, StringFormat={}{0}%, Converter={StaticResource PercentageConverter}}" Name="WinLimit1"></TextBox>
+			<TextBox Grid.Column="2" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[1], UpdateSourceTrigger=PropertyChanged, StringFormat={}{0}%, Converter={StaticResource PercentageConverter}}" Name="WinLimit2"></TextBox>
+			<TextBox Grid.Column="3" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[2], UpdateSourceTrigger=PropertyChanged, StringFormat={}{0}%, Converter={StaticResource PercentageConverter}}" Name="WinLimit3"></TextBox>
+			<TextBox Grid.Column="4" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[3], UpdateSourceTrigger=PropertyChanged, StringFormat={}{0}%, Converter={StaticResource PercentageConverter}}" Name="WinLimit4"></TextBox>
+			<TextBox Grid.Column="5" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[4], UpdateSourceTrigger=PropertyChanged, StringFormat={}{0}%, Converter={StaticResource PercentageConverter}}" Name="WinLimit5"></TextBox>
+			<TextBox Grid.Column="6" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[5], UpdateSourceTrigger=PropertyChanged, StringFormat={}{0}%, Converter={StaticResource PercentageConverter}}" Name="WinLimit6"></TextBox>
+			<TextBox Grid.Column="7" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[6], UpdateSourceTrigger=PropertyChanged, StringFormat={}{0}%, Converter={StaticResource PercentageConverter}}" Name="WinLimit7"></TextBox>
+			<TextBox Grid.Column="8" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[7], UpdateSourceTrigger=PropertyChanged, StringFormat={}{0}%, Converter={StaticResource PercentageConverter}}" Name="WinLimit8"></TextBox>
+			<TextBox Grid.Column="9" Grid.Row="3" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.WinLimits[8], UpdateSourceTrigger=PropertyChanged, StringFormat={}{0}%, Converter={StaticResource PercentageConverter}}" Name="WinLimit9"></TextBox>
 			<!--#endregion-->
-
-			<!--#region Row 5-->
+			<!--#region Row 4-->
 			<TextBlock Grid.Column="0" Grid.Row="4" FontSize="9" FontWeight="Bold" Text="Avg Frags limits" VerticalAlignment="Center"></TextBlock>
-			<TextBox Grid.Column="1" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimit[0], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit1"></TextBox>
-			<TextBox Grid.Column="2" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimit[1], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit2"></TextBox>
-			<TextBox Grid.Column="3" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimit[2], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit3"></TextBox>
-			<TextBox Grid.Column="4" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimit[3], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit4"></TextBox>
-			<TextBox Grid.Column="5" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimit[4], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit5"></TextBox>
-			<TextBox Grid.Column="6" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimit[5], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit6"></TextBox>
-			<TextBox Grid.Column="7" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimit[6], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit7"></TextBox>
-			<TextBox Grid.Column="8" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimit[7], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit8"></TextBox>
-			<TextBox Grid.Column="9" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimit[8], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit9"></TextBox>
+			<TextBox Grid.Column="1" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimits[0], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit1"></TextBox>
+			<TextBox Grid.Column="2" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimits[1], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit2"></TextBox>
+			<TextBox Grid.Column="3" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimits[2], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit3"></TextBox>
+			<TextBox Grid.Column="4" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimits[3], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit4"></TextBox>
+			<TextBox Grid.Column="5" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimits[4], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit5"></TextBox>
+			<TextBox Grid.Column="6" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimits[5], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit6"></TextBox>
+			<TextBox Grid.Column="7" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimits[6], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit7"></TextBox>
+			<TextBox Grid.Column="8" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimits[7], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit8"></TextBox>
+			<TextBox Grid.Column="9" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimits[8], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit9"></TextBox>
+			<!--#endregion-->
+			<!--#region Row 5-->
+			<TextBlock Grid.Column="0" Grid.Row="5" FontSize="9" FontWeight="Bold" Text="Xp limits" VerticalAlignment="Center"></TextBlock>
+			<TextBox Grid.Column="1" Grid.Row="5" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.XpLimits[0], UpdateSourceTrigger=PropertyChanged}" Name="XpLimit1"></TextBox>
+			<TextBox Grid.Column="2" Grid.Row="5" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.XpLimits[1], UpdateSourceTrigger=PropertyChanged}" Name="XpLimit2"></TextBox>
+			<TextBox Grid.Column="3" Grid.Row="5" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.XpLimits[2], UpdateSourceTrigger=PropertyChanged}" Name="XpLimit3"></TextBox>
+			<TextBox Grid.Column="4" Grid.Row="5" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.XpLimits[3], UpdateSourceTrigger=PropertyChanged}" Name="XpLimit4"></TextBox>
+			<TextBox Grid.Column="5" Grid.Row="5" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.XpLimits[4], UpdateSourceTrigger=PropertyChanged}" Name="XpLimit5"></TextBox>
+			<TextBox Grid.Column="6" Grid.Row="5" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.XpLimits[5], UpdateSourceTrigger=PropertyChanged}" Name="XpLimit6"></TextBox>
+			<TextBox Grid.Column="7" Grid.Row="5" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.XpLimits[6], UpdateSourceTrigger=PropertyChanged}" Name="XpLimit7"></TextBox>
+			<TextBox Grid.Column="8" Grid.Row="5" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.XpLimits[7], UpdateSourceTrigger=PropertyChanged}" Name="XpLimit8"></TextBox>
+			<TextBox Grid.Column="9" Grid.Row="5" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.XpLimits[8], UpdateSourceTrigger=PropertyChanged}" Name="XpLimit9"></TextBox>
+			<!--#endregion-->
+			<!--#region Row 6-->
+			<TextBlock Grid.Column="0" Grid.Row="6" FontSize="9" FontWeight="Bold" Text="Dmg limits" VerticalAlignment="Center"></TextBlock>
+			<TextBox Grid.Column="1" Grid.Row="6" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.DmgLimits[0], UpdateSourceTrigger=PropertyChanged}" Name="DmgLimit1"></TextBox>
+			<TextBox Grid.Column="2" Grid.Row="6" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.DmgLimits[1], UpdateSourceTrigger=PropertyChanged}" Name="DmgLimit2"></TextBox>
+			<TextBox Grid.Column="3" Grid.Row="6" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.DmgLimits[2], UpdateSourceTrigger=PropertyChanged}" Name="DmgLimit3"></TextBox>
+			<TextBox Grid.Column="4" Grid.Row="6" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.DmgLimits[3], UpdateSourceTrigger=PropertyChanged}" Name="DmgLimit4"></TextBox>
+			<TextBox Grid.Column="5" Grid.Row="6" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.DmgLimits[4], UpdateSourceTrigger=PropertyChanged}" Name="DmgLimit5"></TextBox>
+			<TextBox Grid.Column="6" Grid.Row="6" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.DmgLimits[5], UpdateSourceTrigger=PropertyChanged}" Name="DmgLimit6"></TextBox>
+			<TextBox Grid.Column="7" Grid.Row="6" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.DmgLimits[6], UpdateSourceTrigger=PropertyChanged}" Name="DmgLimit7"></TextBox>
+			<TextBox Grid.Column="8" Grid.Row="6" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.DmgLimits[7], UpdateSourceTrigger=PropertyChanged}" Name="DmgLimit8"></TextBox>
+			<TextBox Grid.Column="9" Grid.Row="6" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.DmgLimits[8], UpdateSourceTrigger=PropertyChanged}" Name="DmgLimit9"></TextBox>
 			<!--#endregion-->
 		</Grid>
+		<StackPanel Orientation="Horizontal" Name="Weights">
+			<TextBox Width="50" PreviewTextInput="DoubleValidationTextBox" Text="{Binding BattleWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+			<TextBox Width="50" PreviewTextInput="DoubleValidationTextBox" Text="{Binding WinWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+			<TextBox Width="50" PreviewTextInput="DoubleValidationTextBox" Text="{Binding FragsWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+			<TextBox Width="50" PreviewTextInput="DoubleValidationTextBox" Text="{Binding XpWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+			<TextBox Width="50" PreviewTextInput="DoubleValidationTextBox" Text="{Binding DmgWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+			<TextBlock Visibility="{Binding WeightsErrorVisibility}" Foreground="OrangeRed" Text="{Binding WeightsErrorText}"></TextBlock>
+		</StackPanel>
+
 		<Button VerticalAlignment="Bottom" Content="Reset settings" Command="{Binding ResetCommand}"></Button>
 	</StackPanel>
 </Window>
