--- a/MatchingMakingMonitor/SettingsWindow.xaml
+++ b/MatchingMakingMonitor/SettingsWindow.xaml
@@ -8,7 +8,7 @@
 				xmlns:vm="clr-namespace:MatchMakingMonitor.ViewModels"
         mc:Ignorable="d"
 				Icon="Images/favicon.ico" 
-        Title="UI Settings" MinHeight="340" Height="340" Width="720"
+        Title="UI Settings" MinHeight="400" Height="400" Width="720"
 				DataContext="{Binding SettingsViewModel, Source={StaticResource ViewModelLocator}}">
 	<StackPanel Orientation="Vertical" Margin="10" Height="Auto">
 		<StackPanel x:Name="TextPanel" HorizontalAlignment="Stretch" VerticalAlignment="Top" Width="auto" Height="auto" CanVerticallyScroll="true" Grid.Column="1">
@@ -120,7 +120,7 @@
 			<TextBox Grid.Column="9" Grid.Row="4" Margin="5" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding Settings.FragsLimits[8], UpdateSourceTrigger=PropertyChanged}" Name="FragsLimit9"></TextBox>
 			<!--#endregion-->
 			<!--#region Row 5-->
-			<TextBlock Grid.Column="0" Grid.Row="5" FontSize="9" FontWeight="Bold" Text="Xp limits" VerticalAlignment="Center"></TextBlock>
+			<TextBlock Grid.Column="0" Grid.Row="5" FontSize="9" FontWeight="Bold" Text="Avg Xp limits" VerticalAlignment="Center"></TextBlock>
 			<TextBox Grid.Column="1" Grid.Row="5" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.XpLimits[0], UpdateSourceTrigger=PropertyChanged}" Name="XpLimit1"></TextBox>
 			<TextBox Grid.Column="2" Grid.Row="5" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.XpLimits[1], UpdateSourceTrigger=PropertyChanged}" Name="XpLimit2"></TextBox>
 			<TextBox Grid.Column="3" Grid.Row="5" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.XpLimits[2], UpdateSourceTrigger=PropertyChanged}" Name="XpLimit3"></TextBox>
@@ -144,15 +144,38 @@
 			<TextBox Grid.Column="9" Grid.Row="6" Margin="5" TextAlignment="Center" PreviewTextInput="IntValidationTextBox" Text="{Binding Settings.DmgLimits[8], UpdateSourceTrigger=PropertyChanged}" Name="DmgLimit9"></TextBox>
 			<!--#endregion-->
 		</Grid>
-		<StackPanel Orientation="Horizontal" Name="Weights">
-			<TextBox Width="50" PreviewTextInput="DoubleValidationTextBox" Text="{Binding BattleWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
-			<TextBox Width="50" PreviewTextInput="DoubleValidationTextBox" Text="{Binding WinWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
-			<TextBox Width="50" PreviewTextInput="DoubleValidationTextBox" Text="{Binding FragsWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
-			<TextBox Width="50" PreviewTextInput="DoubleValidationTextBox" Text="{Binding XpWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
-			<TextBox Width="50" PreviewTextInput="DoubleValidationTextBox" Text="{Binding DmgWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+		<Grid Margin="0,10,0,10">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="1*"></ColumnDefinition>
+				<ColumnDefinition Width="1*"></ColumnDefinition>
+				<ColumnDefinition Width="1*"></ColumnDefinition>
+				<ColumnDefinition Width="1*"></ColumnDefinition>
+				<ColumnDefinition Width="1*"></ColumnDefinition>
+				<ColumnDefinition Width="1*"></ColumnDefinition>
+			</Grid.ColumnDefinitions>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="19"></RowDefinition>
+				<RowDefinition Height="1*"></RowDefinition>
+			</Grid.RowDefinitions>
+			<TextBlock Grid.Column="1" Grid.Row="0" FontSize="10" HorizontalAlignment="Center" Text="Battles"  />
+			<TextBlock Grid.Column="2" Grid.Row="0" FontSize="10" HorizontalAlignment="Center" Text="Winrate"  />
+			<TextBlock Grid.Column="3" Grid.Row="0" FontSize="10" HorizontalAlignment="Center" Text="Avg Frags"  />
+			<TextBlock Grid.Column="4" Grid.Row="0" FontSize="10" HorizontalAlignment="Center" Text="Avg Xp"  />
+			<TextBlock Grid.Column="5" Grid.Row="0" FontSize="10" HorizontalAlignment="Center" Text="Damage"  />
+
+			<TextBlock Grid.Column="0" Grid.Row="1" FontSize="10" FontWeight="Bold" Text="Calculation weights" VerticalAlignment="Center"></TextBlock>
+			<TextBox Grid.Row="1" Grid.Column="1" Width="50" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding BattleWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+			<TextBox Grid.Row="1" Grid.Column="2" Width="50" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding WinWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+			<TextBox Grid.Row="1" Grid.Column="3" Width="50" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding FragsWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+			<TextBox Grid.Row="1" Grid.Column="4" Width="50" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding XpWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+			<TextBox Grid.Row="1" Grid.Column="5" Width="50" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding DmgWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
 			<TextBlock Visibility="{Binding WeightsErrorVisibility}" Foreground="OrangeRed" Text="{Binding WeightsErrorText}"></TextBlock>
+		</Grid>
+		<StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+			<Button VerticalAlignment="Bottom" HorizontalContentAlignment="Right" Margin="0,0,5,0" Padding="5,2" Content="Import settings" Command="{Binding ImportCommand}"></Button>
+			<Button VerticalAlignment="Bottom" HorizontalContentAlignment="Right" Margin="5,0,5,0" Padding="5,2"  Content="Export settings" Command="{Binding ExportCommand}"></Button>
+			<Button VerticalAlignment="Bottom" HorizontalContentAlignment="Right" Margin="5,0,0,0" Padding="5,2" Content="Reset settings" Command="{Binding ResetCommand}"></Button>
 		</StackPanel>
 
-		<Button VerticalAlignment="Bottom" Content="Reset settings" Command="{Binding ResetCommand}"></Button>
 	</StackPanel>
 </Window>
