--- a/MatchingMakingMonitor/SettingsWindow.xaml
+++ b/MatchingMakingMonitor/SettingsWindow.xaml
@@ -1,17 +1,15 @@
-﻿<Window x:Name="winSettings" x:Class="MatchMakingMonitor.SettingsWindow"
+﻿<Window x:Name="WinSettings" x:Class="MatchMakingMonitor.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        xmlns:local="clr-namespace:MatchMakingMonitor"
-				xmlns:vm="clr-namespace:MatchMakingMonitor.ViewModels"
         mc:Ignorable="d"
 				Icon="Images/favicon.ico" 
         Title="UI Settings" MinHeight="400" Height="400" Width="720"
 				DataContext="{Binding SettingsViewModel, Source={StaticResource ViewModelLocator}}">
 	<StackPanel Orientation="Vertical" Margin="10" Height="Auto">
-		<StackPanel x:Name="TextPanel" HorizontalAlignment="Stretch" VerticalAlignment="Top" Width="auto" Height="auto" CanVerticallyScroll="true" Grid.Column="1">
+		<StackPanel x:Name="TextPanel" HorizontalAlignment="Stretch" VerticalAlignment="Top" Width="auto" Height="auto" CanVerticallyScroll="true">
 			<TextBlock Text="Text Size" />
 			<ComboBox x:Name="ComboTextSizes" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120"
 								ItemsSource="{Binding FontSizes}"
@@ -169,8 +167,8 @@
 			<TextBox Grid.Row="1" Grid.Column="3" Width="50" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding FragsWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
 			<TextBox Grid.Row="1" Grid.Column="4" Width="50" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding XpWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
 			<TextBox Grid.Row="1" Grid.Column="5" Width="50" TextAlignment="Center" PreviewTextInput="DoubleValidationTextBox" Text="{Binding DmgWeight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
-			<TextBlock Visibility="{Binding WeightsErrorVisibility}" Foreground="OrangeRed" Text="{Binding WeightsErrorText}"></TextBlock>
 		</Grid>
+		<TextBlock Visibility="{Binding WeightsErrorVisibility}" Foreground="OrangeRed" HorizontalAlignment="Center" Text="{Binding WeightsErrorText}"></TextBlock>
 		<StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
 			<Button VerticalAlignment="Bottom" HorizontalContentAlignment="Right" Margin="0,0,5,0" Padding="5,2" Content="Import settings" Command="{Binding ImportCommand}"></Button>
 			<Button VerticalAlignment="Bottom" HorizontalContentAlignment="Right" Margin="5,0,5,0" Padding="5,2"  Content="Export settings" Command="{Binding ExportCommand}"></Button>
