--- a/MatchingMakingMonitor/MainWindow.xaml
+++ b/MatchingMakingMonitor/MainWindow.xaml
@@ -1,11 +1,10 @@
-﻿<Window x:Name="Matchmaking_Monitor" x:Class="MatchMakingMonitor.MainWindow"
+﻿<Window x:Name="MatchmakingMonitor" x:Class="MatchMakingMonitor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MatchMakingMonitor"
-				xmlns:VM="clr-namespace:MatchMakingMonitor.ViewModels"
-        mc:Ignorable="d"
+        xmlns:models="clr-namespace:MatchMakingMonitor.Models"
+				mc:Ignorable="d"
         Title="WoWReplays Matchmaking Monitor" 
         WindowStartupLocation="Manual" 
         WindowState="Maximized" 
@@ -54,12 +53,12 @@
 					<ComboBox VerticalAlignment="Center" Width="90" 
 										ItemsSource="{Binding Regions}"
 										SelectedValue="{Binding Region}"
-										IsEnabled="{Binding EnableUI}">
+										IsEnabled="{Binding EnableUi}">
 					</ComboBox>
 				</StackPanel>
 				<StackPanel Orientation="Horizontal">
 					<TextBlock Text="Installation Directory:&#xA;" Margin="20,0,0,0" VerticalAlignment="Center" Height="19"/>
-					<Button Command="{Binding PathClickCommand}" Cursor="Hand" Margin="10,0,0,0" IsEnabled="{Binding EnableUI}">
+					<Button Command="{Binding PathClickCommand}" Cursor="Hand" Margin="10,0,0,0" IsEnabled="{Binding EnableUi}">
 						<Button.Template>
 							<ControlTemplate TargetType="Button">
 								<TextBlock Text="{Binding InstallDirectoryText}" Foreground="{Binding InstallDirectoryColor}" VerticalAlignment="Center" Height="19"/>
@@ -77,7 +76,7 @@
 		<StackPanel Name="Stats" DataContext="{Binding StatsViewModel, Source={StaticResource ViewModelLocator}}" >
 			<StackPanel.Resources>
 				<ResourceDictionary>
-					<DataTemplate x:Key="PlayerTemplate">
+					<DataTemplate x:Key="PlayerTemplate" DataType="models:DisplayPlayerStats">
 						<Border Margin="3,3" BorderThickness="2" BorderBrush="{Binding ColorBorder}" Background="{Binding Background}">
 							<Button Command="{Binding StatsViewModel.DetailCommand, Source={StaticResource ViewModelLocator}}"
 											CommandParameter="{Binding CommandParams}" Cursor="Hand">
@@ -103,7 +102,7 @@
 																	 FontSize="{Binding Settings.FontSize}" />
 											</StackPanel>
 											<StackPanel Grid.Column="2" Orientation="Vertical" Visibility="{Binding Visibility}">
-												<TextBlock Margin="5" Foreground="{Binding ColorWins}" Text="{Binding TextWins}" 
+												<TextBlock Margin="5" Foreground="Black" Text="{Binding TextWins}" 
 																	 FontSize="{Binding Settings.FontSize}" />
 												<TextBlock Margin="5" Foreground="{Binding ColorWinRate}" Text="{Binding TextWinRate}"
 																	 FontSize="{Binding Settings.FontSize}" />
